NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.00
- Bugfix : Fixed width for Thickbox in Manage gallery
- Removed : Use now PclZip from WP Core
- Removed : Convert tags to WP-Taxonomy tables, no more need for ngg_tags, ngg_pic2tags 
- Removed : Wordpress 2.1 - 2.3 files deleted

V0.95 - 25.04.2008
- Bugfix : Correction in media-upload to fit with Wordpress 2.5.1
- Bugfix : Attribute_escape all objects in media-upload
- Bugfix : Correct sortorder for albums
- Bugfix : Typo correction (THX to Momo-I)

V0.94 - 20.04.2008
- Added : New filter option ngg_create_gallery_link
- Changed : Reduce amount of DB queries in albums (Big THX to Alexandr Kindras)
- Changed : Revert wpautop priority change. Doesn't good for other plugins

V0.93 - 12.04.2008
- Added : Select Full-Size or Singlepic in Media Upload
- Added : Check for minimum 8 MB Memory
- Changed : Priority from wpautop must be before gallery
- Bugfix : Added Screencolor to Widgets
- Bugfix : Clean CSS class in setup.php
- Bugfix : Change PHP short tag (Thx to Archedition)
- Bugfix : Remove tab.png from CSS (Thx to Frisco)
- Bugfix : Remove newline and encode quotes in Media-Upload (THX to Trip Mellinger)

V0.92 - 30.03.2008
- Changed : Higher priority for filter in WP2.5 final
- Changed : Do not increase memory_limit with ini_set
- Added : Read EXIF field ImageDescription

V0.91 - 24.03.2008
- Changed : Resample mode back to 3
- Changed : Add DIV "ngg-singlepic-wrapper" for SingelPic (THX to Travel-Junkie)
- Changed : Increase Tweakfactor for Memory Check
- Bugfix : Use admin.css only on NextGEN pages (THX tp Oliver)
- Bugfix : Updates widgets (V1.21) for ImageRotator 3.15
- Bugfix : Change order of rewrite rules for WP 2.5
- Bugfix : Include Dashboard CSS also for page "nextgen-gallery"

V0.90 - 18.03.2008
- NEW : Sort order for images
- NEW : Updated style for Wp 2.5
- NEW : Media upload tab integration for WP 2.5
- Added   : Change wp shortcode filter 
- Added   : TinyMCE V3 Button for WordPress 2.5